show output of scans with 1 second update interval

--- a/module.html
+++ b/module.html
@@ -43,6 +43,8 @@
                         <span>
                     </div>
                 </form>
+                <br>
+                <pre class="well">{{ scanResults }}</pre>
             </div>
         </div>
         <div class="panel panel-default" ng-controller="ReaverController">
