fix formatting of right-aligned checkbox

--- a/module.html
+++ b/module.html
@@ -48,11 +48,13 @@
                         </span>
                     </div>
                     <div class="row">
-                        <span class="col-md-12 pull-right">
-                            <label>
-                                Auto Stop Services
-                            </label>
-                            <input type="checkbox" ng-model="$parent.autoStopServices" ng-change="toggleAutoStopServices()">
+                        <span class="col-md-12">
+                            <span class="pull-right">
+                                <label>
+                                    Auto Stop Services
+                                </label>
+                                <input type="checkbox" ng-model="$parent.autoStopServices" ng-change="toggleAutoStopServices()">
+                            </span>
                         </span>
                     </div>
                 </form>
