fix another formatting issue with responsive stuff

--- a/module.html
+++ b/module.html
@@ -48,7 +48,7 @@
                         </span>
                     </div>
                     <div class="row">
-                        <span class="col-md-12">
+                        <span class="col-sm-12">
                             <span class="pull-right">
                                 <label>
                                     Auto Stop Services
