--- a/module.html
+++ b/module.html
@@ -115,7 +115,7 @@
                         <label for="reaver-session" class="input-group-addon">
                             Session
                         </label>
-                        <select id="reaver-sesssion" class="form-control" ng-model="bssid">
+                        <select id="reaver-session" class="form-control" ng-model="bssid">
                             <option ng-repeat="session in sessions">{{ session }}</option>
                         </select>
                         <span class="input-group-btn">
