--- a/wps/module.html
+++ b/wps/module.html
@@ -15,8 +15,12 @@
     </div>
     <div ng-show="depsdone && depsgood">
         <div class="panel panel-default" ng-controller="WashController">
-            <div class="panel-heading" data-toggle="collapse" data-target="#Wash">
-                <h3 class="panel-title">Scan For WPS Enabled APs</h3>
+            <div class="panel-heading" ng-model="collapse" ng-click="collapse=!collapse" data-toggle="collapse" data-target="#Wash">
+                <h3 class="panel-title">
+                    Scan For WPS Enabled APs
+                    <span class="pull-right" ng-show="collapse">&#9650</span>
+                    <span class="pull-right" ng-hide="collapse">&#9660</span>
+                </h3>
             </div>
             <div id="Wash" class="panel-body panel-collapse collapse in">
                 <form>
@@ -71,8 +75,12 @@
             </div>
         </div>
         <div class="panel panel-default" ng-controller="ReaverController">
-            <div class="panel-heading" data-toggle="collapse" data-target="#Reaver">
-                <h3 class="panel-title">Crack WPS</h3>
+            <div class="panel-heading" ng-model="collapse" ng-click="collapse=!collapse" data-toggle="collapse" data-target="#Reaver">
+                <h3 class="panel-title">
+                    Crack WPS
+                    <span class="pull-right" ng-show="collapse">&#9650</span>
+                    <span class="pull-right" ng-hide="collapse">&#9660</span>
+                </h3>
             </div>
             <div id="Reaver" class="panel-body panel-collapse collapse in">
                 <form>
