--- a/wps/module.html
+++ b/wps/module.html
@@ -141,6 +141,11 @@
                             <option ng-repeat="session in sessions">{{ session }}</option>
                         </select>
                         <span class="input-group-btn">
+                            <button class="btn btn-default" ng-click="downloadCrack()">
+                                <span>
+                                    Download Log
+                                </span>
+                            </button>
                             <button class="btn btn-default" ng-click="deleteCrack()">
                                 <span>
                                     Delete
