for bssid color fix, match color of other table elements

--- a/wps/module.html
+++ b/wps/module.html
@@ -128,7 +128,7 @@
                         <tbody>
                             <tr ng-repeat="ap in scanResults|orderBy:orderByName:reverseSort" class="active" ng-click="selectTarget(ap)">
                                 <td>{{ ap.essid }}</td>
-                                <td><span style="color:rgb(0,0,0);">{{ ap.bssid }}</span></td>
+                                <td><span style="color:#333;">{{ ap.bssid }}</span></td>
                                 <td>{{ ap.vendor }}</td>
                                 <td>{{ ap.channel }}</td>
                                 <td>{{ ap.rssi }}</td>
