fix checkbox location on phone screen

--- a/wps/module.html
+++ b/wps/module.html
@@ -60,7 +60,7 @@
                         </span>
                     </div>
                     <div class="row">
-                        <span class="col-sm-12">
+                        <span class="col-xs-12">
                             <span class="pull-right">
                                 <label>
                                     Auto Stop Services
@@ -184,7 +184,7 @@
                         </span>
                     </div>
                     <div class="row">
-                        <span class="col-sm-12">
+                        <span class="col-xs-12">
                             <span class="pull-right" style="padding-left:20px">
                                 <label>
                                     Auto Stop Services
