--- a/wps/module.html
+++ b/wps/module.html
@@ -33,17 +33,17 @@
                         </select>
                     </div>
                     <p ng-hide="interfaces.length"><small class="text-warning">No Wireless Interfaces Currently In Monitor Mode!</small></p>
-                    <div class="input-group">
-                        <label for="wash-length" class="input-group-addon">
+                    <div class="input-group hidden-xs hidden-sm">
+                        <label for="wash-length-lg" class="input-group-addon">
                             Scan Length (seconds)
                         </label>
-                        <select id="wash-length" class="form-control" ng-model="washTimeout">
+                        <select id="wash-length-lg" class="form-control" ng-model="washTimeout">
                             <option ng-repeat="t in [15,30,60,300,600]">{{ t }}</option>
                         </select>
-                        <label for="wash-channel" class="input-group-addon">
+                        <label for="wash-channel-lg" class="input-group-addon">
                             Channel
                         </label>
-                        <select id="wash-channel" class="form-control" ng-model="channel">
+                        <select id="wash-channel-lg" class="form-control" ng-model="channel">
                             <option ng-repeat="c in ['all',1,2,3,4,5,6,7,8,9,10,11]">{{ c }}</option>
                         </select>
                         <span class="input-group-btn">
@@ -55,6 +55,36 @@
                             <button class="btn btn-default" ng-click="stopScan()">
                                 <span>
                                     Stop Scan
+                                </span>
+                            </button>
+                        </span>
+                    </div>
+                    <div class="input-group hidden-md hidden-lg">
+                        <label for="wash-length-sm" class="input-group-addon">
+                            Length (s)
+                        </label>
+                        <select id="wash-length-sm" class="form-control" ng-model="washTimeout">
+                            <option ng-repeat="t in [15,30,60,300,600]">{{ t }}</option>
+                        </select>
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" ng-click="washScan()">
+                                <span>
+                                    Scan
+                                </span>
+                            </button>
+                        </span>
+                    </div>
+                    <div class="input-group hidden-md hidden-lg">
+                        <label for="wash-channel-sm" class="input-group-addon">
+                            Channel
+                        </label>
+                        <select id="wash-channel-sm" class="form-control" ng-model="channel">
+                            <option ng-repeat="c in ['all',1,2,3,4,5,6,7,8,9,10,11]">{{ c }}</option>
+                        </select>
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" ng-click="stopScan()">
+                                <span>
+                                    Stop
                                 </span>
                             </button>
                         </span>
@@ -159,15 +189,15 @@
                         </select>
                     </div>
                     <p ng-hide="interfaces.length"><small class="text-warning">No Wireless Interfaces Currently In Monitor Mode!</small></p>
-                    <div class="input-group">
-                        <label for="reaver-bssid" class="input-group-addon">
+                    <div class="input-group hidden-xs hidden-sm">
+                        <label for="reaver-bssid-lg" class="input-group-addon">
                             Target BSSID
                         </label>
-                        <input id="reaver-bssid" class="form-control" type="text" ng-model="bssid" ng-change="changeSession()">
-                        <label for="reaver-channel" class="input-group-addon">
+                        <input id="reaver-bssid-lg" class="form-control" type="text" ng-model="bssid" ng-change="changeSession()">
+                        <label for="reaver-channel-lg" class="input-group-addon">
                             Channel
                         </label>
-                        <select id="reaver-channel" class="form-control" ng-model="channel">
+                        <select id="reaver-channel-lg" class="form-control" ng-model="channel">
                             <option ng-repeat="c in ['auto',1,2,3,4,5,6,7,8,9,10,11]">{{ c }}</option>
                         </select>
                         <span class="input-group-btn">
@@ -179,6 +209,34 @@
                             <button class="btn btn-default" ng-click="stopCrack()">
                                 <span>
                                     Stop Crack
+                                </span>
+                            </button>
+                        </span>
+                    </div>
+                    <div class="input-group hidden-md hidden-lg">
+                        <label for="reaver-bssid-sm" class="input-group-addon">
+                            BSSID
+                        </label>
+                        <input id="reaver-bssid-sm" class="form-control" type="text" ng-model="bssid" ng-change="changeSession()">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" ng-click="reaverCrack()">
+                                <span>
+                                    Crack
+                                </span>
+                            </button>
+                        </span>
+                    </div>
+                    <div class="input-group hidden-md hidden-lg">
+                        <label for="reaver-channel-sm" class="input-group-addon">
+                            Channel
+                        </label>
+                        <select id="reaver-channel-sm" class="form-control" ng-model="channel">
+                            <option ng-repeat="c in ['auto',1,2,3,4,5,6,7,8,9,10,11]">{{ c }}</option>
+                        </select>
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" ng-click="stopCrack()">
+                                <span>
+                                    Stop
                                 </span>
                             </button>
                         </span>
@@ -207,7 +265,7 @@
                             <option ng-repeat="session in sessions" value="{{ session.bssid }}">{{ session.essid }}</option>
                         </select>
                         <span class="input-group-btn">
-                            <button class="btn btn-default" ng-click="downloadCrack()">
+                            <button class="btn btn-default hidden-xs hidden-sm" ng-click="downloadCrack()">
                                 <span>
                                     Download Log
                                 </span>
